--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -96,3 +96,14 @@ nav a {
   outline:0;
   border:1px solid rgba(0,0,0,0.1);
 }
+
+/* Form Entry */
+
+#meal-box {
+  width: 100%;
+}
+
+#comments-box {
+  width: 100%;
+  height: 200px
+}
