--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,7 +1,7 @@
 
 html {
   box-sizing: border-box;
-  background: yellow;
+  background: #fea19e;
   font-family:'helvetica neue';
   font-size: 20px;
   font-weight: 200;
@@ -11,6 +11,10 @@ body {
 }
 *, *:before, *:after {
   box-sizing: inherit;
+}
+
+h1 {
+  text-align: center;
 }
 
 .site-wrap {
@@ -69,7 +73,7 @@ li.logo {
   overflow: hidden;
   background: white;
   transition: all .5s;
-  font-weight: 600;
+  font-weight: 300;
   font-size: 30px;
 }
 
@@ -98,7 +102,6 @@ nav a {
 }
 
 /* Form Entry */
-
 #meal-box {
   width: 100%;
 }
@@ -106,4 +109,20 @@ nav a {
 #comments-box {
   width: 100%;
   height: 200px
+}
+
+/* Search Bar */
+.search {
+  width: 100%;
+  height: 50px
+}
+
+#searchbar {
+    max-width: 700px;
+    margin: 70px auto;
+    padding:40px;
+    text-align: justify;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
+    transform: scale(0.98);
+    transition: transform 0.5s;
 }
